--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<div>Hello</div>
+<!DOCTYPE html>
+
+<html>
+  <head>
+    <title>Git tutorial</title>
+  </head>
+
+  <body>
+    <header>
+      <h1>Git tutorial</h1>
+    </header>
+
+    
+  </body>
+</html>
