modified: index.html, new file and code added to: style.css

--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <html>
   <head>
     <title>Git tutorial</title>
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
-    <header>
+    <header class = "header">
       <h1>Git tutorial</h1>
     </header>
 
-    
+
+
   </body>
 </html>
