--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
       <h1>Git tutorial</h1>
     </header>
 
-
-
+    <main>
+      <div class = "container">
+        <div class = "sub-container">
+          <span>Welcome to GitHub</span>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
