modified: index.html, modified: style.css

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       <div class = "container">
         <div class = "sub-container">
           <span>Welcome to GitHub</span>
+
+          <!--COUNTINUE BUTTON-->
+          <button type = "button">Countinue</button>
         </div>
       </div>
     </main>
