modified: index.html, new file: script.js

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <head>
     <title>Git tutorial</title>
     <link rel="stylesheet" href="style.css">
+
+    <script src="script.js" defer></script>
   </head>
 
   <body>
@@ -14,10 +16,10 @@
     <main>
       <div class = "container">
         <div class = "sub-container">
-          <span>Welcome to GitHub</span>
+          <span>Welcome to GitHub</span> 
 
           <!--COUNTINUE BUTTON-->
-          <button type = "button">Countinue</button>
+          <button type = "button" id = "show-text-button">Countinue</button>
         </div>
       </div>
     </main>
